--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".CityDetailsActivity"
+            android:name=".CityDetails"
             android:label="@string/app_name" />
 
         <activity
